Update Set initialization